--- a/apps/ledger-live-desktop/static/i18n/ko/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ko/app.json
@@ -819,12 +819,44 @@
       "redelegation" : {
         "title" : "알고 계셨나요?",
         "description" : "Ledger 검증인의 스테이킹 수수료는 귀하의 현 검증인보다 저렴합니다",
-        "cta" : "Ledger로 재위임"
+        "cta" : "Ledger로 재위임",
+        "linkText" : "재위임이란 무엇이며 시간이 얼마나 소요되나요?",
+        "solana" : {
+          "title" : "알고 계셨나요?",
+          "description" : "Ledger 수수료는 검증인 수수료보다 낮습니다. 이 프로세스는 최대 4일이 소요될 수 있습니다."
+        },
+        "near" : {
+          "title" : "알고 계셨나요?",
+          "description" : "Ledger 수수료는 검증인 수수료보다 낮습니다. 이 프로세스는 최대 65시간이 소요될 수 있습니다."
+        },
+        "elrond" : {
+          "title" : "알고 계셨나요?",
+          "description" : "Ledger 수수료는 검증인 수수료보다 낮습니다. 이 프로세스는 최대 10일이 소요될 수 있습니다."
+        }
       },
       "delegation" : {
         "title" : "알고 계셨나요?",
         "description" : "Ledger 검증인은 {{asset}} 스테이킹 서비스를 {{commission}}%의 커미션으로 제공합니다.",
-        "cta" : "Ledger를 통한 스테이킹"
+        "cta" : "Ledger를 통한 스테이킹",
+        "linkText" : "자세히 알아보기",
+        "ethereum" : {
+          "lido" : {
+            "title" : "알고 계셨나요?",
+            "description" : "Lido를 통해 이더리움을 스테이킹하고 매일 보상을 받으세요. 락업 기간 없음. 최소 예치금 없음.",
+            "cta" : "리도(Lido)를 통한 스테이킹"
+          },
+          "kiln" : {
+            "title" : "호들만으로는 부족합니다. 보유한 ETH로 더 큰 수익을 올려보세요",
+            "description" : "ETH를 32개 이상 보유하고 계시나요? Kiln을 통해 ETH를 안전하게 스테이킹하여 불로소득을 올려보세요.",
+            "cta" : "킬른(Kiln)으로 스테이킹"
+          }
+        },
+        "near" : {
+          "description" : "Ledger by Figment 검증인으로 NEAR를 스테이킹하세요. Ledger의 타협 없는 강력한 보안이 자산을 안전하게 보호합니다."
+        },
+        "elrond" : {
+          "description" : "Ledger by Figment 검증인으로 ELROND를 스테이킹하세요. Ledger의 타협 없는 강력한 보안이 자산을 안전하게 보호합니다."
+        }
       }
     }
   },
@@ -1399,7 +1431,7 @@
         "label" : "인기 있는"
       },
       "earn" : {
-        "title" : "수익",
+        "title" : "스테이킹",
         "description" : "Ledger와 함께 암호화폐 수익 실현"
       }
     }
@@ -1814,7 +1846,7 @@
       "used" : "사용됨",
       "firmwareAvailable" : "오래된 펌웨어:",
       "firmwareUpToDate" : "펌웨어가 최신입니다:",
-      "genuine" : "정품 장치입니다",
+      "genuine" : "귀하의 장치는 정품입니다",
       "incomplete" : "일부 앱이 인식되지 않았습니다. 제거 후 다시 설치하세요."
     },
     "applist" : {
@@ -2129,16 +2161,16 @@
           "description" : "신뢰할 수 있는 Ledger 검증인을 통해 ATOM을 스테이킹하세요. Ledger의 타협 없는 확실한 보안이 자산을 안전하게 보호합니다."
         },
         "osmo" : {
-          "title" : "OSMO를 성장시켜보세요. Ledger를 통해 Figment로 스테이킹.",
-          "description" : "Ledger를 통해 Figment로 검증인을 통해 OSMO를 스테이킹하세요. 최저 수수료와 슬래싱에 대한 보장이 제공됩니다!"
+          "title" : "OSMO를 성장시켜보세요. Ledger by Figment로 스테이킹.",
+          "description" : "Ledger by Figment로 검증인을 통해 OSMO를 스테이킹하세요. 최저 수수료와 슬래싱에 대한 보장이 제공됩니다!"
         },
         "solana" : {
-          "title" : "SOL을 성장시켜보세요. Ledger를 통해 Figment로 스테이킹.",
-          "description" : "Ledger를 통해 Figment로 검증인을 통해 SOL을 스테이킹하세요. Ledger의 타협 없는 확실한 보안이 자산을 안전하게 보호합니다."
+          "title" : "SOL을 성장시켜보세요. Ledger by Figment로 스테이킹.",
+          "description" : "Ledger by Figment로 검증인을 통해 SOL을 스테이킹하세요. Ledger의 타협 없는 확실한 보안이 자산을 안전하게 보호합니다."
         },
         "celo" : {
-          "title" : "CELO를 성장시켜보세요. Ledger를 통해 Figment로 스테이킹.",
-          "description" : "Ledger를 통해 Figment로 검증인을 통해 CELO를 스테이킹하세요. Ledger의 타협 없는 확실한 보안을 통해 슬래싱에 완벽히 대비하세요."
+          "title" : "CELO를 성장시켜보세요. Ledger by Figment로 스테이킹.",
+          "description" : "Ledger by Figment로 검증인을 통해 CELO를 스테이킹하세요. Ledger의 타협 없는 확실한 보안을 통해 슬래싱에 완벽히 대비하세요."
         }
       }
     }
@@ -2236,6 +2268,13 @@
     },
     "switchButton" : "{{language}}로 전환",
     "no" : "다음을 선호하지 않습니다:"
+  },
+  "deviceRename" : {
+    "title" : "{{ productName }} 이름 변경",
+    "chooseName" : "이름을 선택하세요",
+    "placeholder" : "Tony의 Stax",
+    "remainingCharacters" : "{{ remainingCharacters }}개 문자 남음",
+    "renamed" : "{{ productName }} 이름이 “{{ name }}”로 변경되었습니다 "
   },
   "deviceLocalization" : {
     "language" : "언어",
@@ -3472,6 +3511,71 @@
       "providerLink" : "{{provider}}에 대해 자세히 알아보기"
     }
   },
+  "avalanchepchain" : {
+    "account" : {
+      "subHeader" : {
+        "cardTitle" : "Figment 기반",
+        "moreInfo" : "자세한 정보",
+        "drawerTitle" : "Figment 기반",
+        "title" : "이제 Ledger Live에서 AVAX 토큰을 사용할 수 있습니다.",
+        "description" : "이제 Ledger Live로 AVAX 토큰을 관리하고 안전하게 보호할 수 있습니다.",
+        "website" : "Figment 기반"
+      }
+    },
+    "stakedBalance" : "스테이킹",
+    "stakedBalanceTooltip" : "검증인에게 스테이킹할 금액",
+    "delegation" : {
+      "header" : "위임",
+      "add" : "추가",
+      "commission" : "커미션",
+      "validator" : "노드ID",
+      "startTime" : "시작 시간",
+      "endTime" : "종료 시간",
+      "stakeAmount" : "스테이킹",
+      "potentialReward" : "잠재적 보상",
+      "emptyState" : {
+        "description" : "자산을 위임하여 AVAX 보상을 받을 수 있습니다.",
+        "info" : "위임은 어떤 원리인가요?",
+        "delegation" : "보상 받기"
+      },
+      "notEnoughToDelegate" : "위임자가 되려면 P 체인에 가용한 잔액이 25 AVAX 이상 있어야 합니다.",
+      "validatorStake" : "검증인 스테이킹 지분",
+      "validatorRemainingStake" : "이용 가능",
+      "flow" : {
+        "title" : "위임하기",
+        "steps" : {
+          "starter" : {
+            "description" : "AVAX 자산을 검증인에게 위임하여 보상을 받을 수 있습니다.",
+            "bullet" : ["위임된 자산의 소유권은 귀하가 갖습니다", "Ledger 장치를 이용하여 위임하세요", "스테이킹 최소 금액은 25 AVAX", "AVAX 위임 기간은 최소 2주입니다."]
+          },
+          "amount" : {
+            "title" : "금액"
+          },
+          "validator" : {
+            "title" : "검증인",
+            "ledgerByFigmentTC" : "Ledger by Figment 이용약관"
+          },
+          "endDate" : {
+            "title" : "종료 날짜",
+            "text" : "이 위임의 종료 시점을 선택하세요. 해당 위임이 종료되는 날짜는 {{minEndDate}}에서 {{maxEndDate}} 사이여야 합니다.",
+            "label" : "위임 종료 날짜"
+          },
+          "connectDevice" : {
+            "title" : "장치"
+          },
+          "confirmation" : {
+            "title" : "확인",
+            "success" : {
+              "title" : "자산을 성공적으로 위임했습니다",
+              "text" : "블록체인이 트랜잭션 검증을 완료하면 계정 잔액이 업데이트됩니다.",
+              "cta" : "세부사항 보기"
+            },
+            "broadcastError" : "트랜잭션이 실패한 것 같습니다. 잠시 기다려 트랜잭션 내역을 확인한 후 다시 시도하세요."
+          }
+        }
+      }
+    }
+  },
   "near" : {
     "account" : {
       "stakedBalance" : "스테이킹 잔액",
@@ -3532,7 +3636,7 @@
           },
           "validator" : {
             "title" : "검증인",
-            "ledgerByFigmentTC" : "Figment 기반 Ledger 이용약관"
+            "ledgerByFigmentTC" : "Ledger by Figment 이용약관"
           },
           "connectDevice" : {
             "title" : "장치"
@@ -3761,6 +3865,9 @@
       "catalogRampServerDesc" : "다중 거래 공급자 간 전환",
       "enablePlatformDevTools" : "플랫폼 개발자 도구 사용",
       "enablePlatformDevToolsDesc" : "개방형 플랫폼 앱 개발자 도구 창 사용",
+      "customLockScreen" : "맞춤식 잠금 화면 자산",
+      "customLockScreenDesc" : "맞춤식 잠금 화면 그래픽 자산 디버그",
+      "customLockScreenCTA" : "실행",
       "featureFlagsTitle" : "Ledger Live에서 사용되는 정의된 기능 플래그",
       "featureFlagsDesc" : "앱을 다시 실행하면 재정의된 값이 다시 설정됩니다. 유효한 JSON 문자열만 허용됩니다.",
       "featureFlagsEdit" : "편집",
@@ -3776,7 +3883,9 @@
       "runLocalAppDeleteButton" : "삭제",
       "runLocalAppOpenButton" : "열기",
       "enableLearnStagingUrl" : "페이지 스테이징 URL 알아보기",
-      "enableLearnStagingUrlDesc" : "학습 페이지의 스테이징 URL을 활성화합니다."
+      "enableLearnStagingUrlDesc" : "학습 페이지의 스테이징 URL을 활성화합니다.",
+      "openOnboardingAppInstallDebug" : "온보딩 앱 설치 디버그 화면 열기",
+      "openOnboardingAppInstallDebugDesc" : "동기화 온보딩 앱 설치 단계의 구성 요소가 있는 화면을 엽니다."
     },
     "currencies" : {
       "selectPlaceholder" : "암호화 자산 선택",
@@ -3942,6 +4051,10 @@
       "fullNode" : {
         "title" : "비트코인 풀 노드 연결",
         "desc" : "비트코인 풀 노드를 설정해 Ledger의 탐색기를 사용하지 않고 트랜잭션을 동기화하고 전송하세요."
+      },
+      "filterTokenOperationsZeroAmount" : {
+        "title" : "값이 0 인 경우 토큰 트랜잭션을 숨깁니다",
+        "desc" : "값이 없는 토큰 트랜잭션을 숨기는 것은 ETH, 폴리곤, BSC, 트론에 대한 잠재적인 주소 포이즌 공격을 방지 할 수 있습니다..."
       }
     }
   },
@@ -5356,7 +5469,7 @@
       "description" : "30초 이내에 서명이 적용되어야 합니다. 다시 시도해 주세요."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "에너지가 필요한 것보다 낮습니다. 수수료로 최대 30TRX를 지불할 수 있습니다."
+      "title" : "에너지가 필요한 것보다 낮습니다. 수수료로 최대 50 TRX를 지불할 수 있습니다."
     },
     "PairingFailed" : {
       "title" : "페어링 실패",
@@ -5510,6 +5623,9 @@
     "StellarBurnAddressError" : {
       "title" : "스텔라 계정을 추가 중 문제가 발생했습니다"
     },
+    "AvalancheMinimumAmountError" : {
+      "title" : "최소 금액은 24 AVAX입니다"
+    },
     "HederaAddAccountError" : {
       "title" : "귀하의 계정이 추가되지 않았습니다. 다시 시도해 주세요."
     },
@@ -5520,6 +5636,10 @@
     "ImageLoadFromFileError" : {
       "title" : "파일 이미지 로딩 실패",
       "description" : "다른 이미지로 다시 시도하세요"
+    },
+    "ImageLoadFromNftError" : {
+      "title" : "NFT 이미지 로딩 실패",
+      "description" : "다른 NFT로 다시 시도하세요"
     },
     "ImageDownloadError" : {
       "title" : "이미지 다운로드 실패",
@@ -5593,6 +5713,13 @@
       "descriptionWithProductName" : "먼저 {{ productName }} 장치 설정이 필요합니다.\n설정 절차를 안내해드리겠습니다.",
       "goToOnboardingButton" : "내 장치 설정",
       "goToOnboardingButtonWithProductName" : "내 {{ productName }} 설정"
+    },
+    "EtherscanAPIError" : {
+      "title" : "트랜잭션을 가져오지 못했습니다",
+      "description" : "탐색기에서 예상하지 못한 오류가 발생했습니다. 나중에 다시 시도해 주세요"
+    },
+    "GasEstimationError" : {
+      "title" : "가스비를 추정하지 못했습니다"
     }
   },
   "cryptoOrg" : {
@@ -5626,12 +5753,19 @@
   },
   "customImage" : {
     "title" : "맞춤 가능한 잠금 화면",
+    "managerCTA" : "잠금 화면 사진",
     "steps" : {
       "choose" : {
         "stepLabel" : "이미지 선택",
         "description" : "(...)로 설정할 이미지 선택",
         "pickFromNftGallery" : "내 NFT 갤러리에서 선택",
-        "upload" : "내 컴퓨터에서 업로드"
+        "myNfts" : "내 NFT",
+        "upload" : "내 컴퓨터에서 업로드",
+        "chooseNft" : "NFT 선택하기",
+        "selectNft" : "NFT 선택",
+        "previousSelectNft" : "뒤로",
+        "nftEmptyStateTitle" : "아직 표시할 NFT가 없습니다",
+        "nftEmptyStateDescription" : "지갑에 NFT를 추가하고 시작하세요."
       },
       "adjust" : {
         "stepLabel" : "이미지 조정",
@@ -5657,5 +5791,37 @@
     },
     "customImageSet" : "잠금화면을 설정하세요",
     "finishCTA" : "완료"
+  },
+  "onboardingAppInstall" : {
+    "restore" : {
+      "title" : "{{deviceName}}에서와 동일한 앱을 설치하시겠어요?",
+      "titleNoDeviceName" : "이전 Ledger 장치에서와 동일한 앱을 설치하시겠어요?",
+      "subtitle" : "언제든지 앱을 설치하거나 제거할 수 있습니다.",
+      "installCTA" : "애플리케이션 복구",
+      "skipCTA" : "나중에 할게요"
+    },
+    "default" : {
+      "title" : "{{ productName }} 제품은 앱을 사용하여 안전한 블록체인 트랜잭션을 지원합니다",
+      "subtitle" : "기본 앱 세트를 다운로드를 권장드립니다. 이후 추가로 다운로드할 수 있습니다.",
+      "installCTA" : "애플리케이션 설치",
+      "skipCTA" : "나중에 할게요"
+    },
+    "progress" : {
+      "loading" : "로딩 중...",
+      "resolving" : "의존성 해결",
+      "progress" : "앱 설치 중 {{progress}}%",
+      "disclaimer" : "Ledger Live에서 언제든지 앱을 추가하거나 제거하세요."
+    },
+    "cancelled" : {
+      "title" : "{{productName}}에서 앱 설치가 취소되었습니다",
+      "subtitle" : "{{productName}}에서 암호화폐 및 NFT 트랜잭션을 승인하려면 블록체인 앱이 필요합니다.",
+      "installCTA" : "지금 설치",
+      "skipCTA" : "나중에 할게요"
+    },
+    "locked" : {
+      "title" : "{{productName}} 장치가 잠금 상태입니다",
+      "subtitle" : "{{productName}}의 잠금을 해제하고 설치를 다시 시작하세요.",
+      "installCTA" : "설치 재시작"
+    }
   }
 }
